[package]
name = "liquid2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_liquid2"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"
pyo3 = "0.22.2"        # TODO: abi3-py310
