[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "liquid2"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]

dependencies = [
    "regex",
    "iregexp-check>=0.1.3",
    "MarkupSafe>=2",
    "more-itertools>=10",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
tests = ["pytest"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.mypy]
files = "python"
python_version = "3.10"
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
no_implicit_reexport = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
warn_return_any = true
warn_unreachable = true
exclude = ["^python/liquid2/utils/cache\\.py$"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "D",
    "E",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PIE",
    "PL",
    "PT",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TCH",
    "TID",
    "YTT",
]

ignore = ["S105", "S101", "D107", "D105", "PLR0913", "SIM108"]

fixable = ["I"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"python/_liquid2/__init__.py" = ["D104", "I001", "F403", "F405", "A001"]
"python/liquid2/__init__.py" = ["I001"]
"python/liquid2/builtin/expressions.py" = ["D101", "D102"]
"python/tests/test_compliance.py" = ["D103"]
"python/tests/test_jsonpath_compliance.py" = ["D103"]
"python/tests/test_static_analysis.py" = ["D103"]
